Project

General

Profile

Actions

Bug #36656

closed

src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key))

Added by Mykola Golub over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Testing a new functionality to rbd cli, which sends "service status" command to ceph-mgr, may trigger the ceph-mgr crash when processing the command:

2018-10-30T19:52:32.518 INFO:tasks.workunit.cluster1.client.mirror.smithi181.stderr:+ rbd --cluster cluster2 -p mirror mirror image status test
2018-10-30T19:52:32.518 INFO:tasks.workunit.cluster1.client.mirror.smithi181.stderr:+ tee /tmp/tmp.p7JarIGvyP/cluster2-test.mirror_status
2018-10-30T19:52:32.559 INFO:tasks.rbd_mirror.cluster2.client.mirror.2.smithi181.stderr:daemon-helper: command failed with exit status 1
2018-10-30T19:52:32.574 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr:/build/ceph-14.0.0-4671-g74d4ef8/src/mgr/DaemonServer.cc: In function 'bool DaemonServer::_handle_command(MCommand*, std::shared_ptr<CommandContext>&)' thread 7f63e85aa700 time 2018-10-30 19:52:32.568795
2018-10-30T19:52:32.574 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr:/build/ceph-14.0.0-4671-g74d4ef8/src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key))
2018-10-30T19:52:32.576 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: ceph version 14.0.0-4671-g74d4ef8 (74d4ef8a0744565383c4c76d5a58bef607a3f635) nautilus (dev)
2018-10-30T19:52:32.576 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x152) [0x7f63fe103cd9]
2018-10-30T19:52:32.576 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x7f63fe103eb4]
2018-10-30T19:52:32.576 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 3: (DaemonServer::_handle_command(MCommand*, std::shared_ptr<CommandContext>&)+0xc486) [0x564950d8fab6]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 4: (DaemonServer::handle_command(MCommand*)+0xca) [0x564950d8fcba]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 5: (DaemonServer::ms_dispatch(Message*)+0x47) [0x564950d91807]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 6: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x26) [0x564950da0c46]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 7: (DispatchQueue::entry()+0x1669) [0x7f63fe333c49]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 8: (DispatchQueue::DispatchThread::entry()+0xd) [0x7f63fe3e14cd]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 9: (()+0x76db) [0x7f63fd4be6db]
2018-10-30T19:52:32.577 INFO:tasks.ceph.cluster2.mgr.x.smithi189.stderr: 10: (clone()+0x3f) [0x7f63fc69f88f]

http://qa-proxy.ceph.com/teuthology/trociny-2018-10-30_14:49:18-rbd-wip-mgolub-testing-distro-basic-smithi/3204272/teuthology.log


Related issues 2 (0 open2 closed)

Copied to mgr - Backport #37477: mimic: src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key))ResolvedPrashant DActions
Copied to mgr - Backport #37478: luminous: src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key))ResolvedPrashant DActions
Actions #1

Updated by Mykola Golub over 5 years ago

  • Source set to Development
Actions #2

Updated by Mykola Golub over 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Mykola Golub over 5 years ago

  • Backport set to mimic,luminous
Actions #4

Updated by Kefu Chai over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37477: mimic: src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key)) added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37478: luminous: src/mgr/DaemonServer.cc: 912: FAILED ceph_assert(daemon_state.exists(key)) added
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF